--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,22 +2,64 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
       box-sizing: border-box;
    }
-   .sp-only{
+.menu_active_body_fix{
+    overflow: hidden;
+}
+.sp-only{
+    display: block;
+}
+.tab-only{
     display: none;
 }
-
+.pc-only{
+    display: none;
+}
+.header__sp-menu_active{
+    display: none;
+}
+.header__sp-menu_active-transparent{
+    background-color: transparent;
+    border: none;
+}
+.header__sp-menu{
+    display: none;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(#05a5fa 0%, #63fbd7 100%, #67ffd6 100%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    &-list{
+       text-align: center;
+       position: absolute;
+       left: 50%;
+       top: 50%;
+       transform: translate(-50%,-50%);
+    }
+    &-item{
+        color: white;
+        font-size: 24px;
+        font-weight: bold;
+        cursor: pointer;
+        &:not(:first-child){
+            margin-top: 30px;
+        }
+    }
+}
 .header{
     box-shadow: 0 4px 4px rgba(0,0,0,0.2);
-    display: flex;
-    padding: 15px;
-
-    justify-content: space-between;
-    align-items: center;
-    position:fixed;
-    top:0;
-    width: 100%;
-    z-index: 2;
     background-color: white;
+    position:fixed;
+        top:0;
+        width: 100%;
+        z-index: 2;
+    &__inner{
+        display: flex;
+        padding: 15px;
+        justify-content: space-between;
+        align-items: center;
+    }
     &-link__wrapper{
       display: flex;
       align-items: center;
@@ -44,6 +86,7 @@ body {
        position: relative;
    }
    &__menu-line{
+    z-index: 20;
     position: absolute;
     height: 2px;
     background: linear-gradient(to right,#fa41cc,#6020b0);
@@ -65,24 +108,35 @@ body {
 }
 .header__line-active01 {
     transform: translate(0px,8px) rotate(45deg);
-    // transform-origin: 18% 50%;
 }
 .header__line-active03 {
     transform: translate(-1px,-5px) rotate(-45deg);
-    // transform-origin: 18% 50%;
 }
 .mv{
-    padding: 0 20px 400px;
+    padding: 0 20px 300px;
     position: relative;
-    background-image: url("../img/mv01.png");
-    background-position: center center;
-    background-size: cover;
-    &:before{
-        position:absolute;
-        bottom: 0;
-        content:url(../img/mv02.png);
-        transform: translateX(-50%) scale(0.5);
+    overflow: hidden;
+    &__bg-img01-wrapper{
+        position: absolute;
+        top:6%;
         left: 50%;
+        width: 700px;
+        z-index: -1;
+        transform: translateX(-50%);
+    }
+    &__bg-img01{
+        width: 100%;
+    }
+    &__bg-img02-wrapper{
+        position: absolute;
+        top:61%;
+        left: 50%;
+        width: 300px;
+        z-index: -1;
+        transform: translateX(-50%);
+    }
+    &__bg-img02{
+        width: 100%;
     }
     &__title{
         font-size: 32px;
@@ -96,6 +150,7 @@ body {
     }
 }
 .inquire-btn{
+    cursor: pointer;
     &_mv-margin{
         margin-top: 30px;
     }
@@ -104,10 +159,547 @@ body {
     color: white;
     width: 155px;
     height: 37px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 10px 0;
     background: linear-gradient(#fa41cc 0%, #6020b0 100%);
     filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16));
     border-radius: 10px;
+}
+.l-section{
+    padding: 40px 10px 70px 10px;
+    &__title{
+        font-size: 24px;
+        font-weight: bold;
+        text-align: center;
+        &-sub{
+            font-size: 14px;
+            color:#3BA6C9;
+            text-align: center;
+            margin-top: 20px;
+        }
+    }
+}
+
+.intro{
+    &-card{
+        margin-top: 30px;
+        &__title{
+            font-size: 28px;
+            font-weight: bold;
+            text-align: center;
+        }
+        &__img-wrapper{
+            width: 100%;
+            margin: 30px auto 0;
+        }
+        &__img{
+            width: 100%;
+        }
+        &__exp{
+            margin-top: 30px;
+            font-size: 24px;
+            line-height: 48px;
+            &-sub{
+                font-size: 15px;
+                margin-top: 30px;
+                line-height: 26px;
+            }
+        }
+    }
+}
+.price{
+    background-color: #EEFBFB;
+    table{
+        border-collapse: collapse;
+    }
+    &-table{
+        margin: 30px auto 0;
+        width: 100%;
+        th, td{
+            display:block;
+            width: 100%;
+            padding: 30px 0;
+            text-align: center;
+            border:1px solid #E5E5E5;
+            border-top: none;
+        }
+        th.price-table_border-top{
+            border-top: 1px solid #E5E5E5;
+        }
+    }
+}
+.inquire{
+   &__list{
+       margin-top: 20px;
+   }
+   &__title{
+       padding:20px;
+       text-align: center;
+       border: 1px solid #E5E5E5;
+       border-top: none;
+       position: relative;
+       &:first-child{
+           border-top: 1px solid #E5E5E5;
+       }
+       &::after{
+           content: "＋";
+           position: absolute;
+           left: 92%;
+           bottom: 12px;
+           transition: 0.3s;
+       }
+   }
+   &_active{
+    &::after{
+        content: "－";
+        position: absolute;
+        left: 92%;
+        bottom: 12px;
+        transition: 0.3s;
+    }
+   }
+   &__body{
+       padding: 10px 20px;
+       line-height: 26px;
+       background-color: #F2F2F2;
+       font-size: 14px;
+       border: 1px solid #E5E5E5;
+       border-top: none;
+       display: none;
+   }
+}
+.cards{
+    &__item{
+        width: 100%;
+        margin-top: 30px;
+        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    }
+    &__img-wrapper{
+        width: 100%;
+    }
+    &__img{
+        width: 100%;
+    }
+    &__txt{
+        font-size: 20px;
+        line-height: 26px;
+        margin-top: 30px;
+        padding: 0 10px;
+    }
+    &__time{
+        margin-top: 20px;
+        font-weight: bold;
+        font-size: 12px;
+        text-align: right;
+        display: block;
+        padding:0 10px 20px;
+    }
+}
+.works{
+    &__item{
+        width: 270px;
+        margin-top: 30px;
+        margin-left:10px;
+        margin-right: 10px;
+        box-shadow: 5px 3px 6px rgba(0, 0, 0, 0.16);
+    }
+    &__img-wrapper{
+        width: 100%;
+    }
+    &__img{
+        width: 100%;
+    }
+    &__txt{
+        font-size: 20px;
+        line-height: 26px;
+        margin-top: 30px;
+        padding: 0 10px;
+    }
+    &__detail-list{
+        margin-top: 20px;
+        font-size: 20px;
+        padding: 0 10px 20px;
+    }
+    &__detail-item{
+        margin-top: 10px;
+    }
+}
+.slick-track{
+    padding-bottom: 30px;
+}
+.contact{
+    background: linear-gradient(#05a5fa 0%, #63fbd7 100%, #67ffd6 100%);
+    .l-section__title{
+        color: white;
+    }
+    .l-section__title-sub{
+        color: white;
+    }
+    &__form{
+        padding: 40px 20px;
+        background-color: white;
+        margin-top: 50px;
+    }
+    &__title-wrapper{
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+    }
+    &__title{
+      margin-right: 10px;
+    }
+    &__caution{
+        display: inline-block;
+        background-color: #0C449B;
+        padding:5px 16px;
+        color: white;
+        border-radius: 10px;
+    }
+    &__input{
+        width: 100%;
+        height: 40px;
+        background-color:   #eefbfb;
+        margin-top: 20px;
+        padding: 10px;
+        &_mail{
+            width: 100%;
+        }
+        &_detail{
+            height: 400px;
+        }
+    }
+    &__submit{
+        color: white;
+        text-align: center;
+        background-color: gray;
+        border-radius: 10px;
+        margin: 30px auto 0;
+        width: 155px;
+        padding: 10px 0;
+        display: block;
+    }
+}
+.agree-wrapper{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.input__agree{
+    margin-right: 20px;
+}
+.footer{
+    width: 88%;
+    margin: 30px auto 0;
+    padding-bottom: 50px;
+    &__title{
+        font-size: 24px;
+        font-weight: bold;
+        text-align: center;
+    }
+    .copy{
+        color: #333;
+        font-size: 12px;
+        text-align: center;
+        margin-top: 30px;
+
+    }
+}
+.corporate{
+    &__policy-list{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+        font-size: 13px;
+    }
+    &__policy-item{
+        color: #333;
+    }
+}
+.submit_active{
+    background: linear-gradient(#fa41cc 0%, #6020b0 100%);
+}
+@media screen and (min-width:768px) and ( max-width:1024px) {
+    .sp-only{
+        display: none;
+    }
+    .tab-only{
+        display: none;
+    }
+    .pc-only{
+        display: block;
+    }
+     .header{
+         &__inner{
+            padding: 30px;
+         }
+    &__menu-pc-tab{
+        display: flex;
+        justify-content: space-between;
+        width: 30%;
+        text-decoration: none;
+        align-items: center;
+    }
+     }
+     .mv{
+         padding-top: 100px;
+         padding-bottom: 112px;
+         &__bg-img01-wrapper{
+            top: -12%;
+            left: 39%;
+            transform: translateX(0%);
+         }
+         &__bg-img02-wrapper{
+            top: 27%;
+            left: 57%;
+            width: 332px;
+             transform: translateX(0%);
+         }
+     }
+     .intro-card__body-devide{
+         display: flex;
+         margin-top: 30px;
+     }
+    .intro-card__img-wrapper{
+        width: 50%;
+    }
+     .intro-card__body-right{
+         width: 50%;
+         margin-left: 5%;
+     }
+     .intro{
+         .l-section:nth-of-type(2){
+            .intro-card__body-devide{
+                flex-direction: row-reverse;
+            }
+            .intro-card__body-right{
+                width: 50%;
+                margin-right: 5%;
+            }
+
+         }
+     }
+     .price{
+        &-cation{
+            color: #444;
+            text-align: center;
+            margin-top: 38px;
+         }
+     }
+     .price-body-devide{
+         display: flex;
+     }
+     .price .price-table__data_border-top{
+         border-top: 1px solid #e5e5e5;
+     }
+     .inquire__title::after {
+        content: "＋";
+        position: absolute;
+        left: 10%;
+        bottom: 31%;
+        transition: 0.3s;
+    }
+    .inquire_active::after {
+        content: "－";
+        position: absolute;
+        left: 10%;
+        bottom: 31%;
+        transition: 0.3s;
+    }
+    .blog {
+    .cards{
+        display: flex;
+        justify-content: space-between;
+    }
+    .cards__item{
+        width: 32%;
+
+    }
+}
+}
+@media screen and (min-width:1024px) {
+    .sp-only{
+        display: none;
+    }
+    .tab-only{
+        display: none;
+    }
+    .pc-only{
+        display: block;
+    }
+    .header{
+        background-color: white;
+        &__inner{
+            padding: 25px 20px;
+            width: 1024px;
+            margin: 0 auto;
+            background-color: transparent;
+            justify-content: start;
+        }
+        &__logo{
+          width: 47px;
+        }
+        &__left-title{
+            font-size: 24px;
+            margin-right: 16px;
+        }
+        &__menu-pc-tab{
+            display: flex;
+            margin-left:150px;
+            width: auto;
+            text-decoration: none;
+            align-items: center;
+            // justify-content: start;
+        }
+        &__menu-item{
+            cursor: pointer;
+            &:not(:first-child){
+                margin-left: 45px;
+            }
+        }
+        .inquire-btn{
+            margin: 0 0 0 auto;
+            width: 155px;
+            padding: 10px 30px;
+            font-size: 14px;
+        }
+     }
+     section{
+         padding-top: 57px;
+     }
+     .l-section {
+        padding: 10px 10px 70px 10px;
+        &__title{
+            font-size: 32px;
+            margin-top: 30px;
+        }
+    }
+     .l-section__wrapper-pc{
+         width: 1000px;
+         margin: 0 auto;
+     }
+     .mv{
+         padding-top: 260px;
+         padding-bottom: 112px;
+         position:relative;
+         &__title{
+             padding-top:0;
+             line-height: 1.5;
+         }
+         &__bg-img01-wrapper{
+             width: 708px;
+            top: -2%;
+            left: auto;
+            right:-10%;
+            transform: translateX(0%);
+         }
+         &__bg-img02-wrapper{
+            width: 507px;
+            top: 32%;
+            left: auto;
+            right: 12%;
+             transform: translateX(0%);
+         }
+     }
+     .intro-card__body-devide{
+         display: flex;
+         margin-top: 30px;
+         align-items: center;
+     }
+    .intro-card__img-wrapper{
+        width: 50%;
+    }
+     .intro-card__body-right{
+         width: 50%;
+         margin-left: 11%;
+         margin-top: -35px;
+         align-items: center;
+     }
+     .intro{
+         &-card{
+             margin-top: 52px;
+         }
+         .l-section:nth-of-type(2){
+            .intro-card__body-devide{
+                flex-direction: row-reverse;
+            }
+            .intro-card__body-right{
+                width: 50%;
+                margin-right: 5%;
+            }
+
+         }
+     }
+     .price-body-devide{
+         display: flex;
+         align-items: center;
+     }
+     .price .price-table__data_border-top{
+         border-top: 1px solid #e5e5e5;
+     }
+     .price{
+         &-table{
+              margin: 70px auto 0;
+              th{
+                padding: 40px 20px;
+                width:46%;
+              }
+              td{
+                  text-align: left;
+                  padding:40px 0 40px 30px;
+              }
+         }
+         &-cation{
+            color: #444;
+            text-align: center;
+            margin-top: 38px;
+         }
+     }
+     .inquire__title::after {
+        display: none;
+    }
+    .inquire_active::after {
+        display: none;
+    }
+    .inquire{
+        &__body{
+            display: block;
+            padding: 20px 35px 20px 35px;
+        }
+    }
+    .blog {
+        .l-section__wrapper-pc{
+            width: 1220px;
+        }
+    .cards{
+        display: flex;
+        justify-content: space-between;
+    }
+    .cards__item{
+        width: 32%;
+
+    }
+}
+    .works{
+        .l-section__wrapper-pc{
+            width: 100%;
+        }
+        &__item{
+            margin-left:56px;
+        }
+    }
+ .contact{
+     section{
+         padding-top: 0;
+     }
+ }
+ .contact__input_detail{
+     height: 180px;
+ }
+ .corporate__policy-list{
+     width: 370px;
+     margin: 20px auto 0;
+ }
+ .coporate__polisy-item-text-align{
+     text-align: right;
+ }
 }
